@@ -1,6 +1,8 @@
 glibc (2.19-13) UNRELEASED; urgency=medium
 
-  * 
+  [ Aurelien Jarno ]
+  * kfreebsd/local-fbtl.diff: update to revision 5677 (from glibc-bsd).
+    Workarounds a kfreebsd 9.0 to 10.1 ABI break. Closes: #740509.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 27 Oct 2014 21:36:32 +0100
 
